example of terminal running in node setup screen